changed post images to object containing path & url, minor tweaks & dark mode bug fix

--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -13,7 +13,7 @@
     width: 100%;
     height: 20vh;
     margin: 0 0 10vh 0;
-    background-image: url('../../assets/salmon-bg-with-text.jpg');
+    background-image: url('../../assets/salmon-fish.svg');
     background-size: cover;
     background-position: center;
 }
